Performance improvements in some XAML Views

--- a/ScrumTools/ScrumTools/App.xaml
+++ b/ScrumTools/ScrumTools/App.xaml
@@ -19,6 +19,10 @@
                 <Setter Property="BarTextColor" Value="{StaticResource LightTextColor}" />
             </Style>
 
+            <Style TargetType="Image">
+                <Setter Property="IsOpaque" Value="False" />
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
