--- a/ScrumTools/ScrumTools/Pages/AboutPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/AboutPage.xaml
@@ -2,110 +2,123 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ScrumTools.Pages.AboutPage"
-             Title="About">
+             Title="About this App">
     <ContentPage.Resources>
         <ResourceDictionary>
-            <!-- ContentView style -->
-            <Style x:Key="Cell" TargetType="ContentView">
-                <Setter Property="VerticalOptions" Value="Center" />
-                <Setter Property="Padding" Value="2" />
-            </Style>
-            
             <!-- Image Style -->
-            <Style x:Key="Image" TargetType="Image">
-                <Setter Property="HeightRequest" Value="40" />
+            <Style x:Key="socialImage" TargetType="Image">
+                <Setter Property="HeightRequest" Value="50" />
                 <Setter Property="VerticalOptions" Value="Center" />
-                <Setter Property="Margin" Value="2" />
+                <Setter Property="Margin" Value="5" />
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
+    <ContentPage.ToolbarItems>
+        <ToolbarItem 
+            Name="Settings"
+            Command="{Binding CloseCommand}"
+            Order="Primary" Priority="0" Icon="close" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <ScrollView>
-            <Grid Padding="5">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <StackLayout Grid.Row="0">
-                    <Image Source="about.png" HeightRequest="100" />
-                    <Label Text="Scrum Tools" HorizontalOptions="Center" TextColor="{StaticResource PrimaryDarkColor}" FontSize="Large"/>
-                </StackLayout>
-                <StackLayout Grid.Row="1">
-                    <Label HorizontalTextAlignment="Center">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <FormattedString.Spans>
-                                    <Span Text="This application has been developed by " />
-                                    <Span Text="Juan López García" ForegroundColor="{StaticResource PrimaryDarkColor}"/>
-                                    <Span Text=", and will be available for iOS, Android and Windows." />
-                                </FormattedString.Spans>
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
-                    <Label HorizontalTextAlignment="Center">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <FormattedString.Spans>
-                                    <Span Text="The images used for the cards have been designed by " />
-                                    <Span Text="Redbooth" ForegroundColor="{StaticResource PrimaryColor}" />
-                                    <Span Text=", and are in use under a license " />
-                                    <Span Text="Creative Commons – Attribution (CC BY 3.0)" FontAttributes="Bold"/>
-                                    <Span Text="." />
-                                </FormattedString.Spans>
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
-                    <Label HorizontalTextAlignment="Center">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <FormattedString.Spans>
-                                    <Span Text="As developer, I want to show my appreciation to " />
-                                    <Span Text="Adrian G. Jorge" ForegroundColor="{StaticResource PrimaryColor}"/>
-                                    <Span Text=" and " />
-                                    <Span Text="Novoshore Europe S.L." ForegroundColor="{StaticResource PrimaryColor}"/>
-                                    <Span Text=" for the support during the first stages of the project." />
-                                </FormattedString.Spans>
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
-                    <Label HorizontalTextAlignment="Center"  Text="If you like it, please do not forget to rate the application." />
-                    <Label Text="I hope you enjoy it!" HorizontalTextAlignment="Center" TextColor="{StaticResource PrimaryColor}"/>
+            <StackLayout Margin="10,20,10,10">
+                <Image HeightRequest="125">
+                    <Image.Source>
+                        <FileImageSource File="about.png" />
+                    </Image.Source>
+                </Image>
+                <Label HorizontalTextAlignment="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="Scrum Tools" ForegroundColor="{StaticResource PrimaryDarkColor}" FontSize="40"/>
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <Label HorizontalTextAlignment="Center" Margin="0,10,0,0">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="This application has been developed by " />
+                                <Span Text="Juan López García" ForegroundColor="{StaticResource PrimaryDarkColor}"/>
+                                <Span Text=", and will be available for iOS, Android and Windows." />
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <Label HorizontalTextAlignment="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="The images used for the cards have been designed by " />
+                                <Span Text="Redbooth" ForegroundColor="{StaticResource PrimaryColor}" />
+                                <Span Text=", and are in use under a license " />
+                                <Span Text="Creative Commons – Attribution (CC BY 3.0)" FontAttributes="Bold"/>
+                                <Span Text="." />
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <Label HorizontalTextAlignment="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="As developer, I want to show my appreciation to " />
+                                <Span Text="Adrian G. Jorge" ForegroundColor="{StaticResource PrimaryColor}"/>
+                                <Span Text=" and " />
+                                <Span Text="Novoshore Europe S.L." ForegroundColor="{StaticResource PrimaryColor}"/>
+                                <Span Text=" for the support during the first stages of the project." />
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <Label HorizontalTextAlignment="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="If you like it, please do not forget to rate the application." />
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <Label HorizontalTextAlignment="Center" TextColor="{StaticResource PrimaryColor}">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="I hope you enjoy it!" />
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
 
-                    <StackLayout Orientation="Horizontal" Margin="10" HorizontalOptions="Center">
-                        <Image Style="{StaticResource Image}" Source="github.png">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding GoToGitHubCommand}" />
-                            </Image.GestureRecognizers>
-                        </Image>
-                        <Image Style="{StaticResource Image}" Source="linkedin.png">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding GoToLinkedinCommand}" />
-                            </Image.GestureRecognizers>
-                        </Image>
-                        <Image Style="{StaticResource Image}" Source="twitter.png">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding GoToTwitterCommand}" />
-                            </Image.GestureRecognizers>
-                        </Image>
-                        <!--<ContentView Style="{StaticResource Cell}" >
-                            <ContentView.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding GoToGitHubCommand}" />
-                            </ContentView.GestureRecognizers>
-                            <Image Style="{StaticResource Image}" Source="github.png"/>
-                        </ContentView>
-                        <ContentView Style="{StaticResource Cell}" >
-                            <ContentView.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding GoToTwitterCommand}" />
-                            </ContentView.GestureRecognizers>
-                            <Image Style="{StaticResource CellImage}" Source="twitter.png"/>
-                        </ContentView>-->
-                    </StackLayout>
+                <StackLayout Orientation="Horizontal" Margin="10" HorizontalOptions="Center">
+                    <Image Style="{StaticResource socialImage}" >
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToGitHubCommand}" />
+                        </Image.GestureRecognizers>
+                        <Image.Source>
+                            <FileImageSource File="github.png" />
+                        </Image.Source>
+                    </Image>
+                    <Image Style="{StaticResource socialImage}" >
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToLinkedinCommand}" />
+                        </Image.GestureRecognizers>
+                        <Image.Source>
+                            <FileImageSource File="linkedin.png" />
+                        </Image.Source>
+                    </Image>
+                    <Image Style="{StaticResource socialImage}" >
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding GoToTwitterCommand}" />
+                        </Image.GestureRecognizers>
+                        <Image.Source>
+                            <FileImageSource File="twitter.png" />
+                        </Image.Source>
+                    </Image>
                 </StackLayout>
-                
-                <Button Grid.Row="2" Text="Close" Command="{Binding CloseCommand}" Margin="0" BackgroundColor="{StaticResource AccentColor}" TextColor="{StaticResource LightTextColor}"/>
-            
-            </Grid>
+            </StackLayout>
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
