--- a/ScrumTools/ScrumTools/Pages/ComingSoonPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/ComingSoonPage.xaml
@@ -3,20 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ScrumTools.Pages.ComingSoonPage"
              Title="Coming Soon...">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem 
+            Name="Settings"
+            Command="{Binding CloseCommand}"
+            Order="Primary" Priority="0" Icon="close" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <Grid Padding="5" RowSpacing="10">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-
-            <StackLayout Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center">
-                <Image Grid.Row="0" Source="robot.png" HeightRequest="150" />
-                <Label Text="This section is under construction." HorizontalTextAlignment="Center"/>
-                <Label Text="It will be available very soon!!" HorizontalTextAlignment="Center"/>
-            </StackLayout> 
-            <Button Grid.Row="1" Text="Close" Command="{Binding CloseCommand}" Margin="0" BackgroundColor="{StaticResource AccentColor}" TextColor="{StaticResource LightTextColor}"/>
-            
-        </Grid>
+        <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+            <Image Source="robot.png" HeightRequest="150" />
+            <Label Margin="25"  Text="This section is under construction." HorizontalTextAlignment="Center" FontSize="Large"/>
+            <Label Text="It will be available very soon!!" HorizontalTextAlignment="Center" FontSize="Large"/>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
