Creation of documents page

--- a/ScrumTools/ScrumTools/Pages/DocsListPage.xaml
+++ b/ScrumTools/ScrumTools/Pages/DocsListPage.xaml
@@ -21,7 +21,7 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
-                            <Image Grid.Column="0" >
+                            <Image HeightRequest="45" Grid.Column="0" >
                                 <Image.Source>
                                     <FileImageSource File="{Binding Icon}" />
                                 </Image.Source>
